--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -82,7 +82,7 @@ body, html {
 
 
 .aboutme {
-    font-size: 20px;
+    font-size: 1.4vw;
     color: rgba(0,0,0,0);
     width: 300px;
     height: 300px;
