--- a/StyleSheet4.css
+++ b/StyleSheet4.css
@@ -1,5 +1,5 @@
 ﻿/*THIS STYLE SHEET CONTAINS the stlying/effects for the projects sections */
-
+/*this style sheet contains the styling for the social media/industry icons at the bottom of the page*/
 
 /*contains the styling for the projects section*/
 
@@ -75,7 +75,8 @@
 .container {
     width: 100%;
     height: 400px;
-    margin: 50px auto;
+    margin-top: 50px auto;
+   
     -webkit-perspective: 1100px;
     font-size: 62.5%;
 }
@@ -203,7 +204,7 @@
 .container2 {
     width: 100%;
     height: 400px;
-    margin: 100px auto;
+    margin: 30px auto;
     -webkit-perspective: 1100px;
     font-size: 62.5%;
 }
@@ -229,7 +230,7 @@
     }
 
     .runner2 p:first-child {
-        font-size: 2.2em;
+        font-size: 2em;
         font-weight: bold;
         margin: 0;
         text-transform: uppercase;
@@ -336,7 +337,7 @@
 .container3 {
     width: 100%;
     height: 400px;
-    margin: 50px auto;
+    margin: 30px auto;
     -webkit-perspective: 1100px;
     font-size: 62.5%;
 }
@@ -387,3 +388,46 @@
         .runner3 .cta:hover {
             opacity: .8;
         }
+
+
+/*this style sheet contains the styling for the social media/industry icons at the bottom of the page*/
+
+
+/* Style all font awesome icons */
+.fa {
+    padding: 4vw;
+    font-size: 4.5vw;
+    width: 12vw;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+}
+
+    /* Add a hover effect if you want */
+    .fa:hover {
+        opacity: 0.7;
+    }
+
+.fa-instagram {
+   
+   
+    background: #125688;
+    color: white;
+}
+.fa-google {
+ 
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-linkedin {
+    
+    background: #007bb5;
+    color: white;
+}
+
+.fa-github {
+    
+    background: #c825ff;
+    color: white;
+}
