--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,5 +1,7 @@
 ﻿/*the styling for the parallax scrolling effect*/
 /*the styling for the first section and the "skills header"*/
+/*this style sheet section contains the about me in the second background image*/
+
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
