--- a/StyleSheet4.css
+++ b/StyleSheet4.css
@@ -2,7 +2,7 @@
 /*this style sheet contains the styling for the social media/industry icons at the bottom of the page*/
 
 /*contains the styling for the projects section*/
-
+/*contains the styling for the footer at bottom*/
 @-webkit-keyframes slideshow {
     20% {
         background-image: url('images/PSVIRTUALPET5.png');
@@ -76,7 +76,6 @@
     width: 100%;
     height: 400px;
     margin-top: 50px auto;
-   
     -webkit-perspective: 1100px;
     font-size: 62.5%;
 }
@@ -86,7 +85,6 @@
     height: 100%;
     -webkit-animation: slideshow 7s infinite 2s, swing 2s ease-in-out;
     -webkit-transform-origin-y: 0;
-    
     background-image: url('images/PSVIRTUALPET5.png');
 }
 
@@ -95,7 +93,7 @@
         padding: 20px;
         color: #333;
         font-family: 'Anonymous Pro', monospace;
-        font-size:1.4vw;
+        font-size: 1.4vw;
         width: 350px;
         margin: 20px;
         float: right;
@@ -409,25 +407,35 @@
     }
 
 .fa-instagram {
-   
-   
     background: #125688;
     color: white;
 }
+
 .fa-google {
- 
     background: #dd4b39;
     color: white;
 }
 
 .fa-linkedin {
-    
     background: #007bb5;
     color: white;
 }
 
 .fa-github {
-    
     background: #c825ff;
     color: white;
+}
+
+
+
+/*footer styling*/
+
+.footer {
+    height: 50px;
+    width: 100%;
+    background-color: #111;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:center;
 }
