--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -10,8 +10,11 @@ body {
 .nav {
     height: 50px;
     width: 100%;
-    background-color: #4d4d4d;
+    background-color: #111;
     position: relative;
+ 
+
+
 }
 
     .nav > .nav-header {
@@ -43,7 +46,7 @@ body {
         }
 
             .nav > .nav-links > a:hover {
-                background-color: rgba(0, 0, 0, 0.3);
+                background-color: white;
             }
 
     .nav > #nav-check {
